vitrail-d1-macros/tests/ui/fail/too_many_columns.rs
pub use vitrail_d1_core::*;
pub use vitrail_d1_macros::schema;
extern crate self as vitrail_d1;

schema! {
    name too_many_columns_schema

    model oversized {
        id Int @id
        field_1 Int
        field_2 Int
        field_3 Int
        field_4 Int
        field_5 Int
        field_6 Int
        field_7 Int
        field_8 Int
        field_9 Int
        field_10 Int
        field_11 Int
        field_12 Int
        field_13 Int
        field_14 Int
        field_15 Int
        field_16 Int
        field_17 Int
        field_18 Int
        field_19 Int
        field_20 Int
        field_21 Int
        field_22 Int
        field_23 Int
        field_24 Int
        field_25 Int
        field_26 Int
        field_27 Int
        field_28 Int
        field_29 Int
        field_30 Int
        field_31 Int
        field_32 Int
        field_33 Int
        field_34 Int
        field_35 Int
        field_36 Int
        field_37 Int
        field_38 Int
        field_39 Int
        field_40 Int
        field_41 Int
        field_42 Int
        field_43 Int
        field_44 Int
        field_45 Int
        field_46 Int
        field_47 Int
        field_48 Int
        field_49 Int
        field_50 Int
        field_51 Int
        field_52 Int
        field_53 Int
        field_54 Int
        field_55 Int
        field_56 Int
        field_57 Int
        field_58 Int
        field_59 Int
        field_60 Int
        field_61 Int
        field_62 Int
        field_63 Int
        field_64 Int
        field_65 Int
        field_66 Int
        field_67 Int
        field_68 Int
        field_69 Int
        field_70 Int
        field_71 Int
        field_72 Int
        field_73 Int
        field_74 Int
        field_75 Int
        field_76 Int
        field_77 Int
        field_78 Int
        field_79 Int
        field_80 Int
        field_81 Int
        field_82 Int
        field_83 Int
        field_84 Int
        field_85 Int
        field_86 Int
        field_87 Int
        field_88 Int
        field_89 Int
        field_90 Int
        field_91 Int
        field_92 Int
        field_93 Int
        field_94 Int
        field_95 Int
        field_96 Int
        field_97 Int
        field_98 Int
        field_99 Int
        field_100 Int
    }
}

fn main() {}
