vitrail-d1-macros/tests/ui/fail/too_many_columns.stderr
error: model `oversized` defines 101 scalar database columns, exceeding Cloudflare D1's limit of 100 columns per table
 --> tests/ui/fail/too_many_columns.rs:8:11
  |
8 |     model oversized {
  |           ^^^^^^^^^
